Ui-kit №6 fix overflow and add text inside block

--- a/src/css/ui-kit/_index.scss
+++ b/src/css/ui-kit/_index.scss
@@ -8,6 +8,6 @@
  @apply mx-auto my-0 w-full h-full  bg-white z-100 absolute overflow-hidden ;
 }
 #above-block {
- @apply z-1000 relative p-60 overflow-hidden;
+ @apply z-1000 relative py-35 px-60 overflow-hidden;
 
 }
